# NUC_Robot

./: .gitignore  EKF.md  README.md  Realsense_aruco.py  first_map.pgm  first_map.yaml  frames_2024-11-20_21.46.46.gv  frames_2024-11-25_19.45.12.gv  frames_2024-12-07_15.34.45.gv  frames_2024-12-14_14.32.37.gv  pose_graph.g2o  sec_map.pgm  sec_map.yaml
240904-141813-adafruit_feather_esp32s3/: CMakeLists.txt  platformio.ini
240904-141813-adafruit_feather_esp32s3/include/: Kinematics.h  Mobile_Config.h  Mobile_command.h  QEI.h  README
240904-141813-adafruit_feather_esp32s3/src/: 240904-141813-adafruit_feather_esp32s3.code-workspace  Adafruit_BNO055.cpp  Cytron_Motor_260rpm_250W.cpp  Esp32_Cytron_MDxx.cpp  Mobile_command.cpp  QEI.cpp  main.cpp
240905-163647-esp32dev/: CMakeLists.txt  platformio.ini
240905-163647-esp32dev/lib/: README
240905-163647-esp32dev/lib/Adafruit_BusIO/: Adafruit_SPIDevice.h
240905-163647-esp32dev/src/: Adafruit_BNO055.cpp  Adafruit_BNO055.h  Cytron_Motor_260rpm_250W.h  Esp32_Cytron_MDxx.cpp  Esp32_Cytron_MDxx.h  Matrix.cpp  Mobile-control.cpp  Mobile_Config.h  Mobile_command.cpp  Mobile_command.h  QEI.cpp  QEI.h  main.cpp
Docs/: JinpaoMobile.md
Mobile-control/: Controller.cpp  Controller.h  Esp32_Cytron_MDxx.cpp  KalmanFilter.cpp  KalmanFilter.h  Kinematics.cpp  Matrix.h  Mobile-control.ino  Mobile_Config.cpp  Mobile_Config.h  Mobile_command.cpp  Mobile_command.h  QEI.cpp  QEI.h
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/nuc_collector/lib/nuc_collector/: dummy_script.py
install/nuc_collector/local/lib/python3.10/dist-packages/nuc_collector-0.0.0-py3.10.egg-info/: SOURCES.txt  top_level.txt
install/nuc_collector/share/nuc_collector/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
src/convert_odom/: CMakeLists.txt  package.xml
src/convert_odom/config/: nav2.yaml  path.rviz  slam_config.yaml
src/convert_odom/launch/: convert.launch.py  custom_pointcloud_to_laserscan_launch.py  ekf.launch.py  nav2.launch.py  simple.launch.py  slam.launch.py
src/convert_odom/scripts/: accel_filter.py  convert_array_odom.py  convert_odom_pos.py  drw_path.py  dummy_script.py  imu_covariance_node.py  teleop_encode.py  time_sync.py
src/convert_odom/src/: cpp_node.cpp
src/lidarslam_ros2/lidarslam/launch/: lidarslam.launch.py
src/lidarslam_ros2/lidarslam/param/: lidarslam.yaml
src/lidarslam_ros2/lidarslam/rviz/: mapping.rviz
src/lidarslam_ros2/scanmatcher/src/: scanmatcher_component.cpp
src/navigate_NUC/: CMakeLists.txt  package.xml
src/navigate_NUC/config/: Slam_mapping.rviz  nav2_default_view.rviz  nav2_rviz.rviz
src/navigate_NUC/launch/: initial.launch.py  nav2.launch.py  slam.launch.py
src/navigate_NUC/map/: last_map2_gimp.pgm
src/navigate_NUC/params/: last_map2.yaml  lattice.yaml  nav2.yaml  nav2_big.yaml  room_coordinates.yaml  slam_config.yaml
src/navigate_NUC/scripts/: dummy_script.py  nuc_scheduler.py  nuc_user_interface.py  send_nav_goals.py
src/navigate_NUC/src/: cpp_node.cpp
src/navigate_NUC/urdf/: nuc.urdf
src/nuc_collector/: CMakeLists.txt
src/nuc_collector/scripts/: collect_sensor.py
src/nuc_collector/src/: cpp_node.cpp
src/nuc_interfaces/: CMakeLists.txt  package.xml
src/nuc_interfaces/srv/: SetPoseStamped.srv
src/robot_localization/params/: ekf.yaml
src/teleop/: CMakeLists.txt  package.xml
src/teleop/scripts/: dummy_script.py  teleop_joy.py
src/teleop/src/: cpp_node.cpp
src/unitree_lidar_ros2/src/: test.py
test1/: metadata.yaml
